--- a/src/styles/base/_base.scss
+++ b/src/styles/base/_base.scss
@@ -2,12 +2,24 @@ body {
   background-color: $secondary-color;
 }
 
+.maxWidth1032 {
+  max-width: 1032px !important;
+  margin: 0 auto;
+  overflow: hidden;
+}
+
 .text-primary {
   color: $primary-color;
 }
 
 .fb-blue {
   background-color: #3d5a96 !important;
+}
+
+.line-clamp {
+  display: -webkit-box;
+  -webkit-line-clamp: 3;
+  -webkit-box-orient: vertical;  
 }
 
 .brand {
@@ -245,4 +257,8 @@ hr {
 .loader {
   padding: 0;
   margin: 0;
+}
+
+.ellipsis {
+  text-overflow: ellipsis;
 }
