--- a/src/styles/pages/_articles.scss
+++ b/src/styles/pages/_articles.scss
@@ -1,9 +1,7 @@
 .articles {
-  display: flex;
   min-height: 100vh;
 
   &__main {
-    padding-left: 100px !important;
     padding-top: 50px !important;
   }
   &__sidebar {
@@ -18,6 +16,11 @@
     padding: 50px 60px 0 60px !important;
     font-size: 16px;
     line-height: 150%;
+  }
+  @media only screen and (max-width: 992px) {
+    aside {
+      display: none;
+    }
   }
 }
 .small--avatar {
@@ -93,6 +96,7 @@
     display: flex;
     justify-content: space-between;
     margin-top: 0;
+    max-width: 100%;
 
     & div {
       display: flex;
