--- a/src/styles/base/_resets.scss
+++ b/src/styles/base/_resets.scss
@@ -1,4 +1,7 @@
-// @import url("https://fonts.googleapis.com/css?family=Open+Sans");
+@font-face {
+  font-family: 'Open Sans';
+  src: url('../../assets/fonts/Marat Sans Regular.otf') format('opentype');
+}
 
 html,
 body,
@@ -7,12 +10,6 @@ span,
 applet,
 object,
 iframe,
-h1,
-h2,
-h3,
-h4,
-h5,
-h6,
 p,
 blockquote,
 pre,
@@ -87,6 +84,16 @@ video {
   vertical-align: baseline;
   font-family: "Open Sans", sans-serif;
   font-weight: 200;
+}
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  font-weight: 400;
+  line-height: 1.3;
 }
 /* HTML5 display-role reset for older browsers */
 article,
