--- a/src/styles/components/_cards.scss
+++ b/src/styles/components/_cards.scss
@@ -10,3 +10,12 @@
     }
   }
 }
+
+.card.horizontal {
+  .card-image{
+    max-width: 40% !important;
+    img {
+      object-fit: cover;
+    }
+  }
+}
