--- a/src/styles/components/_comments.scss
+++ b/src/styles/components/_comments.scss
@@ -1,21 +1,21 @@
 .comment-box {
     margin-top: 70px;
     border: 1px solid #ccc;
-    padding: 20px 20px 0 20px;
+    padding: 0 20px;
     max-width: 90%;
     line-height: 29px;
 
     &.response {
         margin-top: 20px;
-        margin-bottom: 60px;
         border: none;
         padding-left: 50px!important;
+        border-bottom: 1px solid #ccc;
     }
 
     
     &__user{
         display: flex;
-        align-items: cente r;
+        align-items: center;
         align-content: center;
         & img{
             margin-right: 20px;
