--- a/src/styles/components/_cards.scss
+++ b/src/styles/components/_cards.scss
@@ -3,7 +3,7 @@
     min-height: 100% !important;
   }
   .card-content {
-    line-height: 30px;
+    line-height: 20px;
 
     .card--title {
       font-size: 54px !important;
@@ -11,11 +11,51 @@
   }
 }
 
-.card.horizontal {
-  .card-image{
+.custom-card {
+  display: flex;
+  margin-bottom: 2rem;
+  .col {
+    margin: 0 !important;
+    padding: 0 !important;
+  }
+  .c-card-content{
+    padding: 0;
+  }
+
+  .description {
+    font-size: 16px;
+    line-height: 20px;
+    text-overflow: ellipsis;
+  }
+
+  #author {
+    color: #000;
+  }
+  #author:hover {
+    color: #03a87c;
+    text-decoration: underline;
+  }
+  
+  .c-card-image{
+    width: 152px;
+    max-height: 150px;
     max-width: 40% !important;
+
+    @media screen and (max-width:480px) {
+      max-height: 100px !important;
+    }
+
     img {
+      width: 100%;
+      height: 100%;
       object-fit: cover;
     }
+  }
+}
+.article-info {
+  margin-top: 7px;
+  img {
+    width: 12px;
+    height: 12px;
   }
 }
