--- a/src/styles/base/_resets.scss
+++ b/src/styles/base/_resets.scss
@@ -1,7 +1,4 @@
-@font-face {
-  font-family: 'Open Sans';
-  src: url('../../assets/fonts/Marat Sans Regular.otf') format('opentype');
-}
+
 
 html,
 body,
@@ -82,8 +79,9 @@ video {
   padding: 0;
   border: 0;
   vertical-align: baseline;
-  font-family: "Open Sans", sans-serif;
-  font-weight: 200;
+  font-family: bc-sans-serif-font-light;
+  font-weight: 300;
+  letter-spacing: 0 !important;
 }
 
 h1,
@@ -92,8 +90,8 @@ h3,
 h4,
 h5,
 h6 {
-  font-weight: 400;
-  line-height: 1.3;
+  font-family: bc-sans-serif-font-bold;
+  line-height: 28px;
 }
 /* HTML5 display-role reset for older browsers */
 article,
