--- a/src/styles/utils/_variables.scss
+++ b/src/styles/utils/_variables.scss
@@ -1,4 +1,4 @@
 //COLORS
 $primary-color: #03a87c;
 $secondary-color: whitesmoke;
-$tertiary-color: #ccc;
+$tertiary-color: rgba(0,0,0,.54) !important;
