--- a/src/styles/base/_base.scss
+++ b/src/styles/base/_base.scss
@@ -91,14 +91,13 @@ form {
 textarea.materialize-textarea {
   height: 2rem;
 }
-helper-text {
+.helper-text {
   margin-top: 0 !important;
   padding: 0;
   font-size: 12px;
 }
 
 .input-edit {
-  border: none !important;
   outline: none;
 
   &--large {
@@ -153,6 +152,21 @@ helper-text {
   display: none;
 }
 
+@media screen and (max-width: 480px) {
+  .edit-profile {
+    display: flex;
+    flex-direction: column;
+  
+    .profile-image {
+      order: 1;
+      margin-bottom: 30px;
+    }
+    .profile-form {
+      order: 2;
+    }
+  }
+}
+
 .image {
   opacity: 1;
   display: block;
@@ -165,8 +179,8 @@ helper-text {
   transition: 0.5s ease;
   opacity: 0.5;
   position: absolute;
-  top: 50%;
-  left: 28%;
+  top: 50px;
+  left: 50px;
   transform: translate(-50%, -50%);
   -ms-transform: translate(-50%, -50%);
   text-align: center;
@@ -180,11 +194,11 @@ helper-text {
   }
 
   &-text {
-    background: url("http://www.stickpng.com/assets/images/584abf102912007028bd9332.png");
+    background: url("../../assets/icons/edit-photo.svg");
     background-position: center;
-    background-size: 25px;
+    background-size: 60px;
     background-repeat: no-repeat;
-    padding: 20px 30px;
+    padding: 30px;
   }
 }
 
