--- a/src/styles/components/_cards.scss
+++ b/src/styles/components/_cards.scss
@@ -30,6 +30,7 @@
 
   #author {
     color: #000;
+    text-transform: capitalize;
   }
   #author:hover {
     color: #03a87c;
@@ -57,5 +58,22 @@
   img {
     width: 12px;
     height: 12px;
+  }
+}
+
+@media screen and (max-width:480px) {
+  h5 {
+    font-size: 1.2rem;
+    line-height: 1.1;
+    padding-top: 0;
+  }
+
+  .custom-card .c-card-image {
+    margin-top: 15px;
+  }
+
+  .custom-card .description {
+    font-size: 13px;
+    line-height: 15px;
   }
 }
